--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "cna",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+	"name": "cna",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy' && git subtree push --prefix out origin gh-pages"
+	},
+	"dependencies": {
+		"next": "10.0.7",
+		"react": "17.0.1",
+		"react-dom": "17.0.1"
+	}
 }
