--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
 		"deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy' && git subtree push --prefix out origin gh-pages"
 	},
 	"dependencies": {
+		"classnames": "^2.2.6",
 		"next": "10.0.7",
 		"react": "17.0.1",
-		"react-dom": "17.0.1"
+		"react-dom": "17.0.1",
+		"sass": "^1.32.8"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.31",
+		"@types/react": "^17.0.2",
+		"typescript": "^4.2.2"
 	}
 }
