--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
+		"mobx": "^4.15.4",
+		"mobx-react": "^6.1.4",
 		"next": "10.0.7",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"sass": "^1.32.8"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.7.2",
+		"@babel/plugin-proposal-class-properties": "^7.13.0",
+		"@babel/plugin-proposal-decorators": "^7.13.5",
+		"@babel/preset-typescript": "^7.7.2",
 		"@types/node": "^14.14.31",
 		"@types/react": "^17.0.2",
 		"typescript": "^4.2.2"
