--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "cna",
+	"name": "nextjs",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -26,5 +26,5 @@
 		"@types/react": "^17.0.2",
 		"typescript": "^4.2.2"
 	},
-	"homepage": "./"
+	"homepage": "./nextjs"
 }
