--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy' && git subtree push --prefix out origin gh-pages"
 	},
 	"dependencies": {
+		"axios": "^0.21.1",
 		"classnames": "^2.2.6",
 		"mobx": "^4.15.4",
 		"mobx-react": "^6.1.4",
