--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-scroll": "^1.8.2",
-		"sass": "^1.32.8"
+		"sass": "^1.32.8",
+		"webgl-dev-utils": "0.0.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.7.2",
