--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"bezier-easing": "^2.1.0",
 		"classnames": "^2.2.6",
 		"mobx": "^4.15.4",
 		"mobx-react": "^6.1.4",
