--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
 		"gsap": "^3.8.0",
 		"mobx": "^4.15.4",
 		"mobx-react": "^6.1.4",
-		"next": "10.0.7",
+		"next": "11",
 		"pixi.js": "^6.2.0",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-player": "^2.9.0",
 		"react-scroll": "^1.8.2",
 		"react-waypoint": "^10.1.0",
